# vector

./: Anchor.toml  ecosystem.config.cjs  netlify.toml  package-lock.json  package.json  replit.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ErrorBoundary.tsx
client/src/components/navigation/: NavHeader.tsx
client/src/components/trading/: CommodityChart.tsx  CommoditySidebar.tsx  OrderBook.tsx  StatusBar.tsx  TradingChart.tsx  TradingHeader.tsx  TradingPanel.tsx  TradingViewChart.tsx  TransactionStatus.tsx
client/src/components/ui/: price-ticker.tsx
client/src/contexts/: WalletContext.tsx
client/src/hooks/: useWebSocket.tsx
client/src/lib/: live-trading.ts  mockData.ts  solana-polyfills.ts  trading.ts  wagmi.ts
client/src/pages/: analytics.tsx  earn.tsx  governance.tsx  markets.tsx  trade.tsx
client/src/solana/: vector-protocol.ts
client/src/solana/idl/: vector_protocol.json
client/src/solana/types/: vector_protocol.ts
netlify/functions/: markets.ts  prices.ts
programs/vector-protocol/: Cargo.toml
programs/vector-protocol/src/: lib.rs
scripts/: dev.sh  monitor.sh
server/: analytics.ts  cleanup.ts  health.ts  liquidation.ts  market-maker.ts  oracle.ts  routes.ts  solana-client.ts  storage.ts
shared/: schema.ts
