[package]
name = "vector-protocol"
version = "0.1.0"
description = "Vector Protocol - Tokenized Commodities DEX on Solana (Drift Fork)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vector_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
mainnet = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.17"